infra-k8s/k8s-apps/my-service/namespace.yaml
# Kubernetes Service resource - provides stable networking for pods
apiVersion: v1
# Kind of the resource - in this case a Service
kind: Service
metadata:
  # Name of the service - used by IngressRoute and other resources to reference it
  name: my-service-service
  # Namespace of the service - used to group resources together
  namespace: my-service
spec:
  # Service type determines how the service is exposed. ClusterIP is the default and exposes the service on a cluster-internal IP.
  type: ClusterIP
  # Selector determines which pods receive traffic from this service
  # This matches pods with the label "app: my-service" (see deployment.yaml)
  selector:
    app: my-service
  # Port configuration for the service
  ports:
    # Port 80 is where the service listens for incoming requests
    - name: http
      # Port 80 is where the service listens for incoming requests
      port: 80
      # targetPort is where traffic is forwarded to on the pods (my-service container port)
      targetPort: 80
